--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,36 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext {
+        minSdkVersion = 21
+        targetSdkVersion = 30
+        compileSdkVersion = 30
+        buildToolsVersion = "30.0.3"
+
+        kotlin_version = '1.5.21'
+        version_core = '1.6.0'
+        version_constraint_layout = "2.0.4"
+        version_glide = '4.12.0'
+        version_kotlin_coroutines = '1.5.0'
+        version_lifecycle_extensions = '2.2.0'
+        version_moshi = '1.9.3'
+        version_navigation = "1.0.0"
+        version_retrofit = '2.9.0'
+        version_retrofit_coroutines_adapter = "0.9.2"
+        version_recyclerview = '1.2.1'
+        version_room_db = '2.3.0'
+        version_material = '1.4.0'
+        moshi_version = '1.9.3'
+        version_retrofit = "2.9.0"
+        biometric_version = '1.1.0'
+
+    }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.2.2"
-
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
