--- a/Dagger2Kotlin/build.gradle
+++ b/Dagger2Kotlin/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
 
 
-testImplementation 'junit:junit:4.13.2'
+    testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.mockito:mockito-core:3.11.2'
     testImplementation 'android.arch.core:core-testing:1.1.1'
 
@@ -59,4 +59,6 @@ testImplementation 'junit:junit:4.13.2'
     androidTestImplementation "androidx.test:runner:$androidx_test_version"
     androidTestImplementation "androidx.test:core-ktx:$androidx_test_version"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    kaptAndroidTest "com.google.dagger:dagger-compiler:$dagger_version"
+
 }
