--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ buildscript {
         version_retrofit = "2.9.0"
         biometric_version = '1.1.0'
 
+        hilt_version = '2.38'
+
+
     }
     repositories {
         google()
@@ -31,6 +34,10 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.2.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
