--- a/DaggerToHiltKotlin/build.gradle
+++ b/DaggerToHiltKotlin/build.gradle
@@ -43,11 +43,11 @@ dependencies {
     def dagger_version = '2.38'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "androidx.appcompat:appcompat:1.3.1"
-    implementation "androidx.core:core-ktx:1.6.0"
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
-    implementation "androidx.fragment:fragment-ktx:1.3.6"
+    implementation 'androidx.fragment:fragment-ktx:1.3.6'
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.mockito:mockito-core:3.11.2'
