--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
 rootProject.name = "Dagger2Java"
 include ':Dagger2java'
 include ':Dagger2Kotlin'
+include ':DaggerToHiltKotlinSolution'
 include ':DaggerToHiltKotlin'
