- New Module for fresh Hilt DI setup

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,4 @@ include ':Dagger2java'
 include ':Dagger2Kotlin'
 include ':DaggerToHiltKotlinSolution'
 include ':DaggerToHiltKotlin'
+include ':HiltKotlin'
