Networking Dependency injection on Android with Hilt  from (https://howtodoandroid.com/android-hilt-dependency-injection/)

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,4 @@ include ':Dagger2Kotlin'
 include ':DaggerToHiltKotlinSolution'
 include ':DaggerToHiltKotlin'
 include ':HiltKotlin'
+include ':HiltNetworking1'
