Networking Dependency injection on Android with Hilt  from Implementation of Hilt in Retrofit (https://dev.to/krisrajkumar/implementation-of-hilt-in-retrofit-154f)

--- a/settings.gradle
+++ b/settings.gradle
@@ -5,3 +5,4 @@ include ':DaggerToHiltKotlinSolution'
 include ':DaggerToHiltKotlin'
 include ':HiltKotlin'
 include ':HiltNetworking1'
+include ':Retrofit-With-Hilt'
