Networking Module From Dagger-Hilt + Retrofit + Coroutines Networking Dependency injection on Android with Hilt

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,3 +6,4 @@ include ':DaggerToHiltKotlin'
 include ':HiltKotlin'
 include ':HiltNetworking1'
 include ':Retrofit-With-Hilt'
+include ':Retrofit-Hilt-Coroutines'
