--- a/build.gradle
+++ b/build.gradle
@@ -29,10 +29,10 @@ buildscript {
         core_version = '1.6.0'
         appcompat_version = '1.3.1'
         material_version = '1.4.0'
-        constraint_version = '2.0.4'
+        constraint_version = '2.1.0'
         coroutines_version = '1.5.1-native-mt'
         lifecycle_version = '2.3.1'
-        activity_version = '1.2.4'
+        activity_version = '1.3.0'
         retrofit_version = '2.9.0'
         httplogging_version = '5.0.0-alpha.2'
         json_version = '2.8.7'
@@ -47,7 +47,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.2.2"
+        classpath 'com.android.tools.build:gradle:7.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
 
