--- a/HiltKotlin/build.gradle
+++ b/HiltKotlin/build.gradle
@@ -43,6 +43,7 @@ android {
         sourceCompatibility 11
         targetCompatibility 11
     }
+    namespace 'com.example.android.hilt'
 }
 
 dependencies {
