--- a/DaggerToHiltKotlinSolution/build.gradle
+++ b/DaggerToHiltKotlinSolution/build.gradle
@@ -41,17 +41,17 @@ android {
 }
 
 dependencies {
-    def dagger_version = '2.38.1'
+    def dagger_version = '2.41'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "androidx.appcompat:appcompat:1.3.1"
-    implementation "androidx.core:core-ktx:1.6.0"
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
-    implementation "androidx.fragment:fragment-ktx:1.3.6"
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
+    implementation 'androidx.fragment:fragment-ktx:1.4.1'
 
     testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.mockito:mockito-core:3.11.2'
+    testImplementation 'org.mockito:mockito-core:4.3.1'
     testImplementation 'android.arch.core:core-testing:1.1.1'
 
     def androidx_test_version = '1.4.0'
